[package]
name = "tte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.16"
rust_decimal = "1.22.0"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
rust_decimal_macros = "1.22.0"

